Add keyless anonymous demo mode
